src/objects/c2g__StatisticalBasisVersion__c.object
<CustomObject>
    <description>Stores versions of statistical basis records.</description>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>StatisticalBasisVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ParentVersion__c</fullName>
        <label>Parent Version</label>
        <referenceTo>c2g__StatisticalBasis__c</referenceTo>
        <relationshipLabel>Statistical Basis Versions</relationshipLabel>
        <relationshipName>StatisticalBasisVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipName>StatisticalBasisVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfMeasure__c</fullName>
        <label>Unit of Measure</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Statistical Basis Version</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>c2g__Version__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__ParentVersion__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__UnitOfMeasure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Statistical Basis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statistical Bases Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>